Fix returned type for Particpant.getSchedulingDtStamp
Use regular set for TextSet